docker-k8s-tutorial/kubernetes/nginx-deployment-alpine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25-alpine	# 이미지를 nginx:1.25에서 nginx:1.25-alpine으로 변경
        ports:
        - containerPort: 80
