docker-k8s-tutorial/kubernetes/pod-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
spec:
  containers:
  # 공유 볼륨의 데이터를 80번 포트로 공개하는 nginx 컨테이너
  - name: nginx
    image: nginx:1.25
    ports:
    - containerPort: 80
    # 컨테이너끼리 공유하는 볼륨을 /usr/share/nginx/html/에 마운트
    volumeMounts:
      - mountPath: /usr/share/nginx/html/
        name: docroot
  # 공유 볼륨에 데이터를 기록하는 컨테이너
  - name: alpine
    image: alpine:3.18
    command: ["sh"]
    args:
    - -euc
    - |
      for i in $(seq 1 10) ; do
        echo '{"date": "'$(date)'"}' >> /mnt/date.json
        sleep 3
      done ; sleep infinity
    # 컨테이너끼리 공유하는 볼륨을 /mnt에 마운트
    volumeMounts:
    - mountPath: /mnt/
      name: docroot
  # 컨테이너끼리 공유하는 볼륨(이후에 설명하는 emptyDir 이용)
  volumes:
  - name: docroot
    emptyDir:
      sizeLimit: 500Mi
