docker-k8s-tutorial/kubernetes/ubuntu-configmap-secret.yaml
# ConfigMap과 Secret을 이용하는 Pod 정의
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: ubuntu
    image: ubuntu:22.04
    command: ["sh"]
    args:
    - -euc
    - |
      for i in $(seq 1 10) ; do
        echo "Value of foo is $FOO , bar is $(cat /mnt/bar/bar)"
        sleep 3
      done ; sleep infinity
# 컨피그맵 testconf의 foo를 환경 변수 FOO로 컨테이너에서 이용
    volumeMounts:
    - name: testsecret
      readOnly: true
      mountPath: /mnt/bar
  volumes:
  - name: testsecret		# 시크릿 testsecret을 컨테이너에 마운트하는 볼륨
    secret:
      secretName: testsecret
