docker-k8s-tutorial/kubernetes/ubuntu-emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: container-a
    image: ubuntu:22.04
    command: ["sh"]
    args:
    - -euc
    - "tail -f /mnt/shared-file"
    volumeMounts:
    - mountPath: /mnt/		# emptyDir을 /mnt/에 마운트
      name: test-volume
    # emptyDir에 타임스탬프를 기록하는 컨테이너
  - name: container-b
    image: ubuntu:22.04
    command: ["sh"]
    args:
    - -euc
    - |
      for i in $(seq 1 10) ; do
        date >> /mnt/shared-file
        sleep 3
      done ; sleep infinity
    volumeMounts:
    - mountPath: /mnt/		# emptyDir를 /mnt/에 마운트
      name: test-volume
  volumes:
  - name: test-volume		# emptyDir를 test-volume 볼륨으로 사용
    emptyDir:
      sizeLimit: 500Mi
