docker-k8s-tutorial/kubernetes/ubuntu-example-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: ubuntu
    image: ubuntu:22.04
    command: ["sh"]
    args:
    - -euc
    - |
      for i in $(seq 1 10) ; do
        date >> /mnt/data
        sleep 3
      done ; sleep infinity
    volumeMounts:
    - mountPath: /mnt/
      name: example-vol
  volumes:
  # 퍼시스턴트 볼륨 클레임 example-pvc를 포드에 example-vol 볼륨으로 사용
  - name: example-vol
    persistentVolumeClaim:
      claimName: example-pvc
