docker-k8s-tutorial/kubernetes/ubuntu-gve.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  # 볼륨에 저장된 데이터를 읽는 컨테이너
  - name: container-a
    image: ubuntu:22.04
    command: ["sh"]
    args:
    - -euc
    - "tail -f /mnt/shared-file"
    volumeMounts:
    - mountPath: /mnt/		# 일반 임시 볼륨을 /mnt/에 마운트
      name: test-volume
  # 볼륨에 타임스탬프를 기록하는 컨테이너
  - name: container-b
    image: ubuntu:22.04
    command: ["sh"]
    args:
    - -euc
    - |
      for i in $(seq 1 10) ; do
        date >> /mnt/shared-file
        sleep 3
      done ; sleep infinity
    volumeMounts:
    - mountPath: /mnt/		# 일반 임시 볼륨을 /mnt/에 마운트
      name: test-volume
  volumes:
  - name: test-volume
    ephemeral:
      # 볼륨 요청으로 얻은 볼륨을 일반 임시 볼륨으로 사용
      volumeClaimTemplate:
        metadata:
          labels:
            type: ephemeral
        spec:
          accessModes: ["ReadWriteOnce"]
          resources:
            requests:
              storage: 500Mi
