docker-k8s-tutorial/kubernetes/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx      # app: nginx 레이블이 있는 파드에 대해서 서비스 정의
  ports:
  - protocol: TCP
    port: 80        # 서비스가 대기하는 포트
    targetPort: 80  # 파드가 대기하는 포트
