docker-k8s-tutorial/kubernetes/nginx-statefulset.yaml
# 스테이트풀셋 정의
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset
spec:
  selector:
    matchLabels:
      app: nginx
  serviceName: "nginx"
  replicas: 3              # 파드 3개 실행
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      # nginx 이미지를 실행하는 컨테이너
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
        volumeMounts:
        - name: vol       # 컨테이너끼리 공유하는 볼륨을 마운트
          mountPath: /usr/share/nginx/html
      # 타임스탬프를 기록하는 컨테이너
      - name: recorder
        image: alpine:3.18
        command: ["sh"]
        args:
        - -euc
        - |
          for i in $(seq 1 10) ; do
            echo '{"host": "'$(hostname)'", "time": "'$(date)'"}' >> /mnt/state.json
            sleep 3
          done ; sleep infinity
        volumeMounts:
        - name: vol       # 컨테이너끼리 공유하는 볼륨을 마운트
          mountPath: /mnt/

# 컨테이너끼리 공유하는 볼륨 정의(볼륨 요청)
  volumeClaimTemplates:
  - metadata:
      name: vol
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
# 헤드리스 서비스 정의
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 80
  clusterIP: None
  selector:
    app: nginx
