docker-k8s-tutorial/kubernetes/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx      # app: nginx 레이블이 있는 파드에 대해서 서비스 정의
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80  # 파드가 대기하는 포트
    nodePort: 30080 # 노드에서 서비스가 통신을 수신하는 포트
